syntax = "proto3";

option go_package = "michael/proto";

// Servicio que manejaran entre Michael y Lester
service MichaelLester {

  rpc EntregarOferta (SolicitudOferta) returns (OfertaDisponible); 
  rpc ConfirmarOferta (ConfirmacionOferta) returns (AckConfirmacionOferta);
  rpc PagarLester (MontoPago) returns (ConfirmarPagoLester);
  
  rpc IniciarNotificacionesEstrellas (InicioNotifEstrellas) returns (AckInicioNotif);
  rpc DetenerNotificacionesEstrellas (DetenerNotifEstrellas) returns (AckDetenerNotif);
}

// ==========================================================

// --- EntregarOferta() ---

// Solicitud de oferta que enviara Michael a Lester
message SolicitudOferta {
}

// Oferta disponible que enviara Lester luego de recibir una solicitud
message OfertaDisponible {
  bool disponible = 1;
  int32 botin_inicial = 2;
  float probabilidad_franklin = 3;
  float probabilidad_trevor = 4;
  float riesgo_policial = 5;
}

// --- EntregarOferta() ---

// ==========================================================

// --- ConfirmarOferta() ---

// Michael informa a Lester acerca de la confirmación de la oferta que le envió
message ConfirmacionOferta {
  bool aceptada = 1;
}

// Lester envía ACK de la confirmación
message AckConfirmacionOferta {}

// --- ConfirmarOferta() ---

// ==========================================================

// --- PagarLester() ---

// Michael informa del monto total de la operación a Lester y le paga su correspondencia
message MontoPago {
  int32 correspondencia = 1;
  int32 total = 2;
}

// Lester confirma el pago y le responde a Michael
message ConfirmarPagoLester {
  bool correcto = 1;
  string mensaje = 2;
}
// --- PagarLester() ---

// ==========================================================

// --- IniciarNotificacionesEstrellas() ---

// Michael informa a Lester para iniciar el envío de notificaciones a Trevor/Franklin
message InicioNotifEstrellas {
  string personaje = 1;
  float riesgo_policial = 2;
}

// Lester envía ACK de inicio de envío de notificaciones
message AckInicioNotif {}

// --- IniciarNotificacionesEstrellas() ---

// ==========================================================

// --- DetenerNotificacionesEstrellas() ---

// Michael informa a Lester para detener el envío de notifiaciones a Trevor/Franklin
message DetenerNotifEstrellas {
  string personaje = 1;
  bool exito = 2;
}

// Lester envía ACK de detención de envío de notificaciones
message AckDetenerNotif {}

// --- DetenerNotificacionesEstrellas() ---


// ==========================================================


// Servicio que manejara Michael con Franklin o Trevor
service MichaelTrevorFranklin {
  rpc InformarDistraccion (InfoDistraccion) returns (ResultadoDistraccion);
  rpc InformarGolpe (InfoGolpe) returns (ResultadoGolpe);
  rpc PagarMiembro (MontoPagoMiembro) returns (ConfirmarPagoMiembro);
}

// ==========================================================

// --- InformarDistraccion() ---

// Michael notifica a Trevor/Franklin para proceder con fase 2
message InfoDistraccion {
  float probabilidad_exito = 1;
}

// Trevor/Franklin responden a Michael con el resultado de la fase 2
message ResultadoDistraccion {
  bool exito = 1;
  string motivo = 2;
}

// --- InformarDistraccion() ---

// ==========================================================

// --- InformarGolpe() ---

// Michael notifica a Trevor/Franklin para proceder con fase 3
message InfoGolpe {
  float probabilidad_exito = 1;
  int32 botin = 2;
  float riesgo_policial = 3;
}

// Trevor/Franklin responden a Michael con el resultado de la fase 3
message ResultadoGolpe {
  bool exito = 1;
  int32 botin = 2;
  string motivo = 3;
  int32 botin_extra = 4;
  int32 estrellas_final = 5;
}

// --- InformarGolpe() ---

// ==========================================================

// --- PagarMiembro() ---

// Michael informa el total de la operacion a Trevor y Franklin y les paga su correspondencia
message MontoPagoMiembro {
  int32 correspondencia = 1;
  int32 total = 2;
}

// Trevor y Franklin confirman el pago y le responden a Michael
message ConfirmarPagoMiembro {
  bool correcto = 1;
  string mensaje = 2;
}

// --- PagarMiembro() ---